# name: test_get[uvloop-False-False]
  <class 'dict'> {
    'dev': False,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/account',
        'url': '/account',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/analyses',
        'url': '/analyses',
      },
      'genbank': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/genbank',
        'url': '/genbank',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/history',
        'url': '/history',
      },
      'hmm': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/hmm',
        'url': '/hmm',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/indexes',
        'url': '/indexes',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/jobs',
        'url': '/jobs',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/settings',
        'url': '/settings',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/tasks',
        'url': '/tasks',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/users',
        'url': '/users',
      },
    },
    'first_user': False,
    'version': 'v0.0.0',
  }
---
# name: test_get[uvloop-False-True]
  <class 'dict'> {
    'dev': True,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/account',
        'url': '/account',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/analyses',
        'url': '/analyses',
      },
      'genbank': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/genbank',
        'url': '/genbank',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/history',
        'url': '/history',
      },
      'hmm': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/hmm',
        'url': '/hmm',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/indexes',
        'url': '/indexes',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/jobs',
        'url': '/jobs',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/settings',
        'url': '/settings',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/tasks',
        'url': '/tasks',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/users',
        'url': '/users',
      },
    },
    'first_user': False,
    'version': 'v0.0.0',
  }
---
# name: test_get[uvloop-True-False]
  <class 'dict'> {
    'dev': False,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/account',
        'url': '/account',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/analyses',
        'url': '/analyses',
      },
      'genbank': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/genbank',
        'url': '/genbank',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/history',
        'url': '/history',
      },
      'hmm': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/hmm',
        'url': '/hmm',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/indexes',
        'url': '/indexes',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/jobs',
        'url': '/jobs',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/settings',
        'url': '/settings',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/tasks',
        'url': '/tasks',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/users',
        'url': '/users',
      },
    },
    'first_user': True,
    'version': 'v0.0.0',
  }
---
# name: test_get[uvloop-True-True]
  <class 'dict'> {
    'dev': True,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/account',
        'url': '/account',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/analyses',
        'url': '/analyses',
      },
      'genbank': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/genbank',
        'url': '/genbank',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/history',
        'url': '/history',
      },
      'hmm': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/hmm',
        'url': '/hmm',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/indexes',
        'url': '/indexes',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/jobs',
        'url': '/jobs',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/settings',
        'url': '/settings',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/tasks',
        'url': '/tasks',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/developer/api/users',
        'url': '/users',
      },
    },
    'first_user': True,
    'version': 'v0.0.0',
  }
---
